--- a/.gitignore
+++ b/.gitignore
@@ -92,13 +92,4 @@ dist
 .vuepress/dist
 
 # Serverless directories
-.serverless/
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
+.serverless
